Kapitel 14 begonnen und 14.1 und 14.2 aufgenommen.
git-svn-id: https://svn.lug-jena.de/uni-skripte@3519 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-ringtheorie/skript.ltx
+++ b/kuelshammer-ringtheorie/skript.ltx
@@ -4764,6 +4764,88 @@ Sei $R$ ein Ring.
   \end{proof}
 \end{satz}
 
+\chapter{Bimoduln}
+
+Im folgenden seien $R,S,T$ immer Ringe.
+
+%def 14.1
+\begin{defini}
+  Ein \highl[Bimodul]{$R$-$S$"~Bimodul} ist eine Menge $M$ mit den
+  Verknüpfungen:
+  \begin{align*}
+    M\times M &\rightarrow M & (x,y) &\mapsto(x+y)\\
+    R\times M &\rightarrow M & (r,x) &\mapsto(rx)\\
+    M\times S &\rightarrow M & (x,s) &\mapsto(xs)
+  \end{align*}
+  Für diese gilt:
+  \begin{enumerate}
+   \item $M\in\vorunten{R}\kat{Mod}$ und $M\in\kat{Mod}_{S}$
+   \item $r\in R$, $s\in S$, $m\in M\Rightarrow(rm)s=r(ms)$
+  \end{enumerate}
+\end{defini}
+
+\begin{bemerk}
+  Die $R$-$S$"~Bimoduln bilden eine Kategorie $\vorunten{R}\kat{Mod}_{S}$.
+\end{bemerk}
+
+\begin{bsp}
+  \begin{enumerate}[a)]
+   \item $R$ selbst ist ein $R$-$R$"~Bimodul. Man schreibt $\vorunten{R}R_{R}$.
+   \item $M\in\kat{Mod}_{R}\Rightarrow M\in\vorunten{\End_{R}(M)}M_{R}$.
+    Analog ist $M\in\vorunten{R}\kat{Mod}\Rightarrow
+    M\in\vorunten{R}\kat{Mod}_{\End_{R}(M)^{o}}$.
+  \end{enumerate}
+\end{bsp}
+
+%bem 14.2
+\begin{bemerk}
+  \begin{enumerate}
+   \item Für $M\in\vorunten{R}\kat{Mod}_{S}$ und
+    $N\in\vorunten{R}\kat{Mod}_{T}$ ist
+    $\Hom_{R}(M,N)\in\vorunten{S}\kat{Mod}_{T}$, wobei $(sft)(m)= f(ms)\cdot
+    t$ für alle $s\in S$, $t\in T$, $f\in\Hom_{R}(M,N)$ und $m\in M$ ist.
+   \item Für $M\in\vorunten{R}\kat{Mod}_{S}$ und
+    $N\in\vorunten{T}\kat{Mod}_{S}$ ist analog
+    $\Hom_{S}(M,N)\in\vorunten{T}\kat{Mod}_{R}$, wobei $(tfr)(m)= t\cdot f(rm)$.
+  \end{enumerate}
+\end{bemerk}
+
+\begin{satz}
+  Für $M\in\vorunten{R}\kat{Mod}_{S}$ und $N\in\vorunten{S}\kat{Mod}_{T}$ ist
+  $M\otimes_{S} N\in\vorunten{R}\kat{Mod}_{T}$, wobei $r(m\otimes n)t=
+  (rm)\otimes(nt)$ für $r\in R$, $m\in M$, $n\in N$ und $t\in T$ gilt.
+  \begin{proof}
+    %Vorlesung vom 1.7.2011
+    Für $r\in R$ ist $f_{r}\colon M\times N\rightarrow M\otimes_{S}N$ mit
+    $(m,n)\mapsto(rm)\otimes n$ $S$"~ausgeglichen. Daher existiert ein
+    $f_{r}'\in\End_{\Z}(M\otimes_{S}N)$ mit $f_{r}'(m\otimes n)= f_{r}(m,n)=
+    (rm)\otimes n$ mit $m\in M$ und $n\in N$. Dann gilt für $r,r'\in R$, $m\in
+    M$ und $n\in N$:
+    \begin{align*}
+      (f_{r}'\circ f_{r'}')(m\otimes n) &= f_{r}'((r'm)\otimes n)= (r\cdot
+	 r'm)\otimes n= (rr'\cdot m)\otimes n=f_{rr'}'(m\otimes n)\\
+      (f_{r}'+f_{r'}')(m\otimes n) &= \dotsb=f_{r+r'}'(m\otimes n)\\
+      f_{1}'(m\otimes n) &= m\otimes n
+    \end{align*}
+    Mir $rx\coloneqq f_{r}'(x)$ für $r\in R$ und $x\in M\otimes_{R}N$ ist dann
+    $M\otimes_{S}N\in\vorunten{R}\kat{Mod}$, denn für $r,r'\in R$ sowie
+    $x,y\in M\otimes_{S}N$ gilt:
+    \begin{align*}
+      r(r'x) &= f_{r}(f_{r'}'(x))= f_{rr'}'(x)= (rr')x\\
+      r(x+y) &= \dotsb=rx+ry\\
+      1x &= x
+    \end{align*}
+    Für $r\in R$, $m\in M$ und $n\in N$ ist dabei $r(m\otimes n)=
+    f_{r}'(m\otimes n)= (rm)\otimes n$. Analog ist
+    $M\otimes_{S}N\in\kat{Mod}_{T}$ mit $(m\otimes n)t= m\otimes(nt)$ für
+    $m\in M$, $n\in N$ und $t\in T$.
+
+    Wegen $(r(m\otimes n))t= ((rm)\otimes n)t=
+    (rm)\otimes(nt)=r(m\otimes(nt))= r((m\otimes n)t)$ ist
+    $M\otimes_{S}N\in\vorunten{R}\kat{Mod}_{T}$.
+  \end{proof}
+\end{satz}
+
 \todo[inline]{fehlende Vorlesungen einbauen}
 
 
