--- a/kuelshammer-ringtheorie/skript.ltx
+++ b/kuelshammer-ringtheorie/skript.ltx
@@ -5018,6 +5018,37 @@ Im folgenden seien $R,S,T$ immer Ringe.
   \end{proof}
 \end{satz}
 
+%satz 14.9
+\begin{satz}
+  $M\in\vorunten{R}\kat{Mod}$ ist genau dann endlich erzeugt, wenn zu jeder
+  Familie $(M_{i})_{I\in I}$ in $\vorunten{R}\kat{Mod}$ und jedem
+  $R$"~Epimorphismus $f\colon\coprod_{i\in I} M_{i}\rightarrow M$ eine
+  endliche Teilmenge $J\subseteq I$ und ein $R$"~Epimorphismus
+  $g\colon\coprod_{j\in J} M_{j}\rightarrow M$ existiert.
+  \begin{proof}
+    \begin{itemize}
+     \item["`$\Rightarrow$"'] Sei $M= Rm_{1}+\dotsb+ Rm_{n}$, $(M_{i})_{i\in
+      I}$, $f$ wie oben und $q_{j}\colon M\rightarrow\coprod M_{i}$\todo{Ist
+      das ein i oder j?} die
+      entsprechenden Injektoren mit $j\in I$. Für $k=1,\dotsc,n$ existiert ein
+      $x_{k}=(x_{k_{i}})_{i\in I}\in\coprod M_{i}$ mit $m_{k}= f(x_{k})$.
+      Dabei ist $J_{k}\coloneqq\Set{j\in I | x_{k_{j}}\neq0}$ endlich. Daher:
+      $J\coloneqq\bigcup_{k=1}^{n} J_{k}\subseteq I$ endlich. Für
+      $k=1,\dotsc,n$ ist $x_{k}= \sum_{j\in J} q_{j}(x_{k_{j}})$, also $m_{k}=
+      f(x_{k})= \sum_{j\in J} (f\circ q_{j})(x_{k_{j}})\in\sum_{j\in J}
+      \Bld(f\circ q_{j})$. Daher ist $M= \sum_{j\in J}\Bld(f\circ q_{j})$ und
+      $g\colon\coprod M_{j}\rightarrow M$ mit $(y_{j})_{j\in J}\mapsto\sum
+      (f\circ q_{j})(y_{j})$ ist ein $R$"~Epimorphismus.
+     \item["`$\Leftarrow$"'] Da $M$ zu einem Faktormodul eines freien
+      $R$"~Moduls isomorph ist, existiert eine Menge~$I$ und ein
+      $R$"~Epimorphismus $f\colon\coprod_{i\in I} R\rightarrow M$. Nach der
+      Voraussetzung existiert eine endliche Teilmenge $J\subseteq I$ und ein
+      $R$"~Epimorphismus $g\colon\coprod_{j\in J} R\rightarrow M$. Mit
+      $\coprod_{j\in J} R$ ist dann auch $M$ endlich erzeugt.
+    \end{itemize}
+  \end{proof}
+\end{satz}
+
 \todo[inline]{fehlende Vorlesungen einbauen}
 
 
