--- a/kuelshammer-ringtheorie/skript.ltx
+++ b/kuelshammer-ringtheorie/skript.ltx
@@ -4977,7 +4977,7 @@ Im folgenden seien $R,S,T$ immer Ringe.
 \end{bsp}
 
 %def 14.7
-\begin{defini}[Morita-äquivalent]
+\begin{defini}[Morita-äquivalent]\label{def:14.7}
   $R$ und $S$ heißen \highl{Morita-äquivalent}, falls additive Funktoren
   $\vorunten{R}\kat{Mod}\rightleftarrows^{\Phi}_{\Psi}\vorunten{S}\kat{Mod}$
   mit $\Psi\circ\Phi\sim\id_{\vorunten{R}\kat{Mod}}$ und
@@ -5123,7 +5123,7 @@ Im folgenden seien $R,S,T$ immer Ringe.
 \end{satz}
 
 %satz 14.12
-\begin{satz}
+\begin{satz}\label{satz:14.12}
   Sei $R\approx S$ vermöge additiver Funktoren
   $\vorunten{R}\kat{Mod}\rightleftarrows_{\Psi}^{\Phi} \vorunten{S}\kat{Mod}$.
   Dann ist $P\coloneqq\Phi R$ ein Progenerator mit $\End_{S}(P)\cong R^{o}$.
@@ -5176,7 +5176,7 @@ Im folgenden seien $R,S,T$ immer Ringe.
   die Einführung eines Morita"=Kontexts macht alles symmetrisch.
 \end{bemerk}
 
-\begin{satz}
+\begin{satz}\label{satz:15.1}
   Im \autoref{bsp:15.1} gilt:
   \begin{enumerate}
    \item Ist $P$ endlich erzeugt und projektiv, dann ist $\tau$ surjektiv.
@@ -5203,8 +5203,8 @@ Im folgenden seien $R,S,T$ immer Ringe.
   \end{proof}
 \end{satz}
 
-%satz 15.3
-\begin{satz}
+%satz 15.2
+\begin{satz}\label{satz:15.2}
   Sei $(R,S,P,Q,\sigma,\tau)$ ein Morita-Kontext. Ist $\sigma$ surjektiv, so
   gilt:
   \begin{enumerate}
@@ -5283,6 +5283,82 @@ Im folgenden seien $R,S,T$ immer Ringe.
     \end{enumerate}
   \end{proof}
 \end{satz}
+
+%satz 15.3
+\begin{satz}
+  Für Ringe $R$ und $S$ sind äquivalent:
+  \begin{enumerate}
+   \item $R\approx S$
+   \item Es existieren additive Funktoren
+    $\vorunten{R}\kat{Mod}\rightleftarrows_{\Psi}^{\Phi}
+    \vorunten{S}\kat{Mod}$ mit $\Psi\circ\Phi\sim\Id_{\vorunten{R}\kat{Mod}}$
+    und $\Phi\circ\Psi\sim\Id_{\vorunten{S}\kat{Mod}}$.
+   \item Es existiert ein $S$"~Progenerator $P$ mit $R^{o}\cong\End_{S}(P)$.
+   \item Es existiert ein Morita-Kontext $(R,S,P,Q,\sigma,\tau)$ mit
+    surjektiven $\sigma$ und $\tau$.
+   \item Es existieren $P\in\vorunten{S}\kat{Mod}_{R}$ und
+    $Q\in\vorunten{R}\kat{Mod}_{S}$ mit $P\otimes_{R}Q\simeq S$ in
+    $\vorunten{S}\kat{Mod}_{S}$ und $Q\otimes_{S}P\simeq R$ in
+    $\vorunten{R}\kat{Mod}_{R}$.
+  \end{enumerate}
+  \begin{proof}
+    \begin{itemize}
+     \item [(i)$\Rightarrow$(ii)] \autoref{def:14.7}
+     \item [(ii)$\Rightarrow$(iii)] \autoref{satz:14.12}
+     \item [(iii)$\Rightarrow$(iv)] \autoref{satz:15.1}
+     \item [(iV)$\Rightarrow$(v)] \autoref{satz:15.2}
+     \item [(v)$\Rightarrow$(ii)] Seien $P$ und $Q$ wie in (v) und
+      $\alpha\colon P\otimes_{R}Q\rightarrow S$ sowie $\beta\colon
+      Q\otimes_{S}P\rightarrow R$ die entsprechenden Bimodul"=Isomorphismen.
+      Dann sind $\Phi\coloneqq
+      P\otimes_{R}?\colon\vorunten{R}\kat{Mod}\rightarrow\vorunten{S}\kat{Mod}$
+      und $\Psi\coloneqq
+      Q\otimes_{S}?\colon\vorunten{S}\kat{Mod}\rightarrow\vorunten{R}\kat{Mod}$
+      additive Funktoren. Für $M\in\vorunten{R}\kat{Mod}$ haben wir einen
+      $R$Isomorphismus $\phi_{M}\colon\Psi\Phi
+      M=Q\otimes_{S}P\otimes_{R}M\xrightarrow{\alpha\otimes\id_{M}}
+      R\otimes_{R}M\xrightarrow{\mu_{M}} M$. Dann ist
+      $\phi\coloneqq(\phi_{M})_{M\in\vorunten{R}\kat{Mod}}\colon\Psi\circ\Phi\Rightarrow\Id_{\vorunten{R}\kat{Mod}}$
+      eine natürliche Äquivalenz, denn man zeigt leicht, dass für
+      $M,M'\in\vorunten{R}\kat{Mod}$ und $f\in\Hom_{R}(M,M')$ das folgende
+      Diagramm kommutiert:
+
+      \begin{tikzpicture}
+	\node (qpm) {$Q\otimes_{S}P\otimes_{R}M$};
+	\node [right=3cm of qpm] (m) {$M$};
+	\node [below=1.5cm of qpm] (qpms) {$Q\otimes_{S}P\otimes_{R}M'$};
+	\node [below=1.5cm of m] (ms) {$M'$};
+	\draw[->]
+	(qpm) edge node (fm) [above]{$\phi_{M}$} (m)
+	(qpm) edge node (ifi) [right]{$\id_{Q}\otimes\id_{P}\otimes f$} (qpms)
+	(m) edge node (f) [right]{$f$} (ms)
+	(qpms) edge node (fms) [above] {$\phi_{M'}$} (ms);
+      \end{tikzpicture}
+      Der Rest geht analog.
+    \end{itemize}
+  \end{proof}
+\end{satz}
+
+\begin{bemerk}
+  \begin{enumerate}
+   \item $R\approx S\Rightarrow R^{o}\approx S^{o}$
+   \item Man kann zeigen, dass in der obigen Situation stets $\Phi\sim
+    P\otimes_{R}?$ ist.
+  \end{enumerate}
+\end{bemerk}
+
+\begin{bsp}
+  \begin{enumerate}[(a)]
+   \item Für jeden Ring $R$ und $n\in\N$ ist $R^{n}$ ein $R$-Progenerator mit
+    $\End_{R}(R^{n})\simeq\End_{R}(R)^{n\times n}\cong(R^{o})^{n\times
+    n}\cong(R^{n\times n})^{o}$. Daher gilt: $R\approx R^{n\times n}$ für
+    $n\in\N$.
+   \item Für jedes Idempotent $e \in R$ mit $ReR=R$ ist $R\approx eRe$, denn
+    $(R,eRe, eR,Re,\sigma,\tau)$ ist ein Morita"=Kontext mit surjektiven
+    $\sigma\colon eR\otimes_{R}Re\rightarrow eRe$ mit $x\otimes y\mapsto xy$
+    und $\tau\colon Re\otimes_{eRe}eR\rightarrow R$ mit $y\otimes x\mapsto yx$.
+  \end{enumerate}
+\end{bsp}
 
 %Vorlesung vom 8.7.2011
 %bem 15.4
