Die Mehrzahl von Modul ist Moduln.
git-svn-id: https://svn.lug-jena.de/uni-skripte@3533 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-ringtheorie/skript.ltx
+++ b/kuelshammer-ringtheorie/skript.ltx
@@ -2245,7 +2245,7 @@ Sei $R$ ein Ring.
     J(R) &= \Set{x\in R | 1+axb\in R^{\times}, \forall a,b\in R}\\
     &=\Set{x\in R | 1+ax\in R^{\times}, \forall a\in R}\\
     &= \Set{x\in R | 1+ax\text{ linksinvertierbar für alle } a\in R}\\
-    &= \Set{x\in R | xS=0 \text{ für alle einfachen $R$"~Module } S}
+    &= \Set{x\in R | xS=0 \text{ für alle einfachen $R$"~Moduln } S}
   \end{align*}
   \begin{proof}
     \begin{enumerate}[Gle{i}chung~1]
