--- a/kuelshammer-ringtheorie/skript.ltx
+++ b/kuelshammer-ringtheorie/skript.ltx
@@ -2046,7 +2046,7 @@ Sei $R$ ein Ring.
 Sei $R$ ein Ring.
 
 %def 7.1
-\begin{defini}[Maximaler, minimaler Untermodul]
+\begin{defini}[Maximaler, minimaler Untermodul, Jacobson-Radical]
   Sei $M\in\vorunten{R}\kat{Mod}$. Wie üblich definiert man
   \highl[Untermodul!maximale]{maximale} und
   \highl[Untermodul!minimale]{minimale Untermoduln} von $M$. Der Durchschnitt
