--- a/kuelshammer-ringtheorie/skript.ltx
+++ b/kuelshammer-ringtheorie/skript.ltx
@@ -2077,7 +2077,7 @@ Sei $R$ ein Ring.
   \end{enumerate}
   \begin{proof}
     \begin{enumerate}
-     \item Sei $L\subseteq M$ ein maximaler Untermodul. Also ist $N/L$
+     \item Sei $L\subseteq N$ ein maximaler Untermodul. Also ist $N/L$
       einfach. Sei $g\colon N\rightarrow N/L$ kanonisch. Dann ist $g\circ
       f\in\Hom_{R}(M,N/L)$. Im Fall $g\circ f=0$ ist der Kern $M$. Andernfalls
       ($g\circ f\neq0$) ist $g\circ f$ nach dem \autoref{satz:6.1}. Also
