Definition 13.1 mit eingebaut
git-svn-id: https://svn.lug-jena.de/uni-skripte@3537 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-ringtheorie/skript.ltx
+++ b/kuelshammer-ringtheorie/skript.ltx
@@ -4398,6 +4398,24 @@ Sei $R$ ein Ring.
 
 \chapter{Das Tensorprodukt}\label{cha:13}
 
+Sei $R$ ein Ring.
+
+%def 13.1
+\begin{defini}[Ausgeglichene Abbildung]
+  Seien $M\in\kat{Mod}_{R}$ und $N\in\vorunten{R}\kat{Mod}$ sowie
+  $A\in\vorunten{\Z}\kat{Mod}$. Eine Abbildung $f\colon M\times N\rightarrow
+  A$ heißt \highl[Abbildung!ausgeglichene]{ausgeglichen}\index{ausgeglichen},
+  falls gilt:
+  \begin{enumerate}
+   \item $f(m+m',n)= f(m,n)+f(m',n)$
+   \item $f(m,n+n')= f(m,n)+f(m,n')$
+   \item $f(mr,n)=f(m,rn)$
+  \end{enumerate}
+\end{defini}
+
+\begin{bemerk}
+  Daraus folgt leicht, $f(m,0)=0=f(0,n)$ und $f(-m,n)= -f(m,n)=f(m,-n)$.
+\end{bemerk}
 
 %Vorlesung vom 24.6.2011
 %bem 13.2
