Es heißt Ring der Quaternionen und es ist ein Schiefkörper.
git-svn-id: https://svn.lug-jena.de/uni-skripte@3539 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-ringtheorie/skript.ltx
+++ b/kuelshammer-ringtheorie/skript.ltx
@@ -921,7 +921,7 @@
 \begin{defini}[Ring]
   Ein \highl{Ring} $R$ ist ein Tripel $R=(R,+,\cdot)$ mit
   \begin{enumerate}
-   \item $(R,+)$ ist eine abelsche Gruppe. mit dem neutralen Element~$0$, dem
+   \item $(R,+)$ ist eine abelsche Gruppe mit dem neutralen Element~$0$, dem
     \highl{Nullelement}.
    \item $(R,\cdot)$ ist ein \highl{Monoid}, d.\,h. assoziativ mit $1$, dem
     \highl{Einselement}.
@@ -1125,8 +1125,7 @@
     \end{pmatrix}$.
    \item Der Ring $\R\times\{0\}\subseteq\R\times\R$ ist \emph{kein} unitärer
     Teilring.
-   \item Der Ring der \highl{Quaternionenschiefkörper}\help{Ist das nicht
-    einfach der Ring der Quaternionen?} $\HH\coloneqq\Set{
+   \item Der Ring der \highl{Quaternionen}\index{Ring!Quaternionen} $\HH\coloneqq\Set{
     \begin{pmatrix}
       a& b\\
       -\overline{b}& \overline{a}
