--- a/kuelshammer-ringtheorie/skript.ltx
+++ b/kuelshammer-ringtheorie/skript.ltx
@@ -1238,11 +1238,12 @@
   Daher ist jeder einfache Ring prim.
   \begin{proof}
     Seien $I,J\trianglelefteq R$ mit $I\nsubseteq P$ und $J\nsubseteq P$. Es
-    ist zu zeigen, dass $IJ\nsubseteq P$. Wegen $I'\coloneqq I+P\supsetneq P$
-    existiert wegen der Maximalität ein $x\in I'\cap X$. Wegen $J'\coloneqq
-    J+P \supsetneq P$ existiert analog ein $y\in J'\cap X$. Dann $xy\in
-    I'J'\cap X$, also $xy\notin P$ wegen $P\cap X=\emptyset$. Also
-    $P\supsetneq I'J' =(I+P)(J+P)= IJ+IP+PJ+P^{2}\subseteq IJ+P$, d.\,h.
+    ist zu zeigen, dass $IJ\nsubseteq P$. Wegen $I'\coloneqq
+    I+P\supsetneq P$ und der Maximalität 
+    existiert ein $x\in I'\cap X$ und wegen $J'\coloneqq
+    J+P \supsetneq P$ gibt es analog ein $y\in J'\cap X$. Dann $xy\in
+    I'J'\cap X$. Da $P$ und $X$ disjunkt sind, ist also $xy\notin P$. Also
+    $P\nsupseteq I'J' =(I+P)(J+P)= IJ+IP+PJ+P^{2}\subseteq IJ+P$, d.\,h.
     $IJ\nsubseteq P$. Damit ist die erste Aussage bewiesen. Für die zweite
     Aussage setzt man $X\coloneqq\{1\}$ und die dritte Aussage ist klar.
   \end{proof}
