Fehler in der Formulierung am Beginn von Kapitel 4 behoben.
git-svn-id: https://svn.lug-jena.de/uni-skripte@3543 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-ringtheorie/skript.ltx
+++ b/kuelshammer-ringtheorie/skript.ltx
@@ -1372,7 +1372,8 @@
 
 %def 4.1
 \begin{defini}[Ringhomomorphismus]
-  Seien $R,S$ Ringe und eine Abbildung $\phi\colon R\rightarrow S$ heißt
+  Seien $R$ und $S$ Ringe sowie $\phi\colon R\rightarrow S$ eine
+  Abbildung. Diese heißt
   \highl{Homomorphismus} oder \highl{Ringhomomorphismus}, falls gilt,
   $\phi(a+b)=\phi(a)+\phi(b)$ und $\phi(a\cdot b)=\phi(a)\cdot\phi(b)$ für
   alle $a,b\in R$.
@@ -1381,17 +1382,17 @@
 \begin{bemerk}
   \begin{enumerate}
    \item Wir lassen zu, dass $\phi(1_{R})\neq1_{S}$. Im Fall
-    $\phi(1_{R})=1_{S}$ heißt das $\phi$ \highl{unitär}. Stets ist
+    $\phi(1_{R})=1_{S}$ heißt das $\phi$ \highl{unitär}\index{Homomorphismus!unitärer}. Stets ist
     $\phi(0)=0$. Ist $\phi$ unitär, so ist $\phi(x)\in U(S)$ und
     $\phi(x)^{-1}= \phi(x^{-1})$ für $x\in U(R)$.
    \item Sind $\phi\colon R\rightarrow S$ und $\psi\colon S\rightarrow T$
     Ringhomomorphismen, so auch $\psi\circ\phi\colon R\rightarrow T$. Daher
-    bilden Ringe und Ringhomomorphismen eine Kategorie $\kat{Ri}$. Neutrale
-    Elemente in $\kat{Ri}(R,R)$ ist jeweils die Identitätsabbildung
+    bilden Ringe und Ringhomomorphismen eine Kategorie $\kat{Ri}$. Neutrales
+    Element in $\kat{Ri}(R,R)$ ist jeweils die Identitätsabbildung
     $\id_{R}$.
    \item Wie üblich definiert man Mono-, Epi-, Iso-, Endo- und Automorphismen
     von Ringen. Für jeden Ringisomorphismus $\phi$ ist die Umkehrabbildung
-    $\phi^{-1}$ auch ein Ringisomorphismus. Daher sieht man dass die
+    $\phi^{-1}$ auch ein Ringisomorphismus. Daher sieht man, dass die
     Automorphismen bezüglich der Komposition eine Gruppe bilden:
     $\Aut(R)\coloneqq\Set{\alpha\colon R\rightarrow R | \alpha \text{
     Automorphismus}}$ die \highl{Automorphismengruppe} von $R$.
