Definition eines Moduls ausformuliert.
git-svn-id: https://svn.lug-jena.de/uni-skripte@3545 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-ringtheorie/skript.ltx
+++ b/kuelshammer-ringtheorie/skript.ltx
@@ -1493,15 +1493,16 @@
 Sei $R$ ein Ring.
 %def 5.1
 \begin{defini}[Linksmoduln]
-  $R$"~\highl{Linksmodul}: Menge~$M=_{R}M$, Verknüpfungen $+\colon M\times
+  Ein $R$"~\highl{Linksmodul} $\vorunten{R}M$b besteht aus einer
+  Menge~$M$ sowie Verknüpfungen $+\colon M\times
   M\rightarrow M$ mit $(a,b)\mapsto a+b$ und $\cdot\colon R\times M\rightarrow
-  M$ mit $(r,m)\mapsto rm$, Axiome:
+  M$ mit $(r,m)\mapsto rm$ mit den Eigenschaften:
   \begin{enumerate}
-   \item $(M,+)$ abelsche Gruppe.
-   \item $(rs)m=r(sm)$
-   \item $(r+s)m=rm+sm$
-   \item $r(m+n)=rm+rn$
-   \item $1m=m$
+   \item $(M,+)$ ist eine abelsche Gruppe.
+   \item $(rs)m=r(sm)$ für $r,s\in R$  und $m\in M$.
+   \item $(r+s)m=rm+sm$ für $r,s\in R$  und $m\in M$.
+   \item $r(m+n)=rm+rn$ für $r\in R$  und $m,n\in M$.
+   \item $1m=m$ für $m\in M$.
   \end{enumerate}
   Analog definiert man den Begriff des \highl{Rechtsmodul}s $M=M_{R}$.
 \end{defini}
