Tippfehler und statt Bruch Faktorisierung.
git-svn-id: https://svn.lug-jena.de/uni-skripte@3546 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-ringtheorie/skript.ltx
+++ b/kuelshammer-ringtheorie/skript.ltx
@@ -1570,7 +1570,7 @@ Sei $R$ ein Ring.
    \item Sei $A$ ein $\Z$"~Modul, d.\,h. eine abelsche Gruppe, so sind die
     Untermoduln von $A$ die Untergruppen von $A$.
    \item Sei $M$ ein $R$"~Modul und $(N_{i})_{i\in I}$ eine nichtleere Familie
-    von Untermoduln von $M$. Dann ist $\bigcap_{i\in I} n_{i}\subseteq M$ ein
+    von Untermoduln von $M$. Dann ist $\bigcap_{i\in I} N_{i}\subseteq M$ ein
     Untermodul. Speziell: $X\subseteq M\Rightarrow
     D\coloneqq\bigcap_{N\subseteq M, X\subseteq N} N\subseteq M$ ein
     Untermodul. Das heißt von $X$ erzeugter Untermodul. Man schreibt,
@@ -1641,7 +1641,7 @@ Sei $R$ ein Ring.
   Abbildung $f$ als
   \highl[Abbildung!lineare]{R"~linear}\index{linear} oder als
   \highl[Homomorphismus]{R"~Homomorphismus}. Setze
-  $\Hom_{R}(M,N)\coloneqq\Set{f\in\Abb(M,N) | f \text{ist $R$"~linear}}$. Dann
+  $\Hom_{R}(M,N)\coloneqq\Set{f\in\Abb(M,N) | f \text{ ist $R$"~linear}}$. Dann
   ist $\End_{R}(M)\coloneqq\Hom_{R}(M,M)$ und $\Aut_{R}(M)=
   \Set{f\in\End_{R}(M) | f \text{ bijektiv}}$. Wie üblich definiert man die
   anderen Morphismen.
@@ -1671,7 +1671,7 @@ Sei $R$ ein Ring.
     Dieser heißt \highl{Endomorphismenring} $\End_{R}(M)$.
 
     Wichtig: $M$ ist ein $\End_{R}(M)$"~Modul mit $f\cdot m\coloneqq f(m)$ für
-    $f\in\End_{R}(M)$ und $x\in M$. Seien $f\in\Hom_{R}(L,M)$ und
+    $f\in\End_{R}(M)$ und $m\in M$. Seien $f\in\Hom_{R}(L,M)$ und
     $g\in\Hom_{R}(M,N)$ zwei Isomorphismen, so sind auch $g\circ f$ und
     $f^{-1}$ Isomorphismen. Daher ist $\Aut_{R}(M)= U(\End_{R}(M))$ bezüglich
     $\circ$ eine Gruppe, die \highl{Automorphismengruppe}.
@@ -1679,15 +1679,15 @@ Sei $R$ ein Ring.
     $R$"~Isomorphismus. Dann sind $M$ und $N$ \highl{isomorph}. Wir schreiben,
     $M\simeq N$ oder $M\simeq_{R}N$. Die Relation $\simeq$ ist eine
     Äquivalenzrelation.
-   \item Seien $M,N\in \vorunten{R}\kat{Mod}$ und $f\in\Hom_{R}(M,N)$ Es ist
-    leicht zu sehen, dass für $U\subseteq M$ Untermodul auch $(U)\subseteq N$
+   \item Seien $M,N\in \vorunten{R}\kat{Mod}$ und $f\in\Hom_{R}(M,N)$. Es ist
+    leicht zu sehen, dass für $U\subseteq M$ Untermodul auch $f(U)\subseteq N$
     ein Untermodul ist. Umgekehrt sei $V\subseteq N$ ein Untermodul. Dann ist
     auch $f^{-1}(V)\subseteq M$ ein Untermodul. Speziell ist
     $\ker(f)=f^{-1}(0)= \Set{x\in M | f(x)=0}\subseteq M$ ein Untermodul, der
     so genannte \highl{Kern}.
 
     Es ist leicht einzusehen, dass $F\colon M/\ker f\rightarrow\Bld(f)$ mit
-    $x+\ker f\mapsto f(x)$ ein wohldefinierter $R$"~Isomorphismus. Folglich
+    $x+\ker f\mapsto f(x)$ ein wohldefinierter $R$"~Isomorphismus ist. Folglich
     haben wir nach dem Homomorphiesatz (\autoref{satz:4.1}): $M/\ker
     f\simeq\Bld(f)$.
 
@@ -1729,10 +1729,11 @@ Sei $R$ ein Ring.
 \begin{satz}[3.\,Isomorphiesatz]
   Sei $M$ ein $R$"~Modul, $U_{0},U,V_{0},V\subseteq M$ Untermoduln mit
   $U_{0}\subseteq U$ und $V_{0}\subseteq V$. Dann folgt:
-  \begin{gather*}
-    \frac{U_{0}+(U\cap V)}{U_{0}+(U\cap V_{0})} \simeq\frac{V_{0}+(V\cap
-       U)}{V_{0}+(V\cap U_{0})} \simeq\frac{U\cap V}{(U_{0}\cap V)+(V_{0}\cap U)}
-  \end{gather*}
+  \begin{align*}
+    U_{0}+(U\cap V)/U_{0}+(U\cap V_{0}) &\simeq V_{0}+(V\cap
+    U)/V_{0}+(V\cap U_{0})\\
+    &\simeq U\cap V/(U_{0}\cap V)+(V_{0}\cap U)
+  \end{align*}
 \end{satz}
 
 %def 5.4
