Definition einer Kategorie verbessert.
Ich habe die Herkunft der A,B,C,D erklärt. Damit sollte die Definition
klarer sein.

git-svn-id: https://svn.lug-jena.de/uni-skripte@3547 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-ringtheorie/skript.ltx
+++ b/kuelshammer-ringtheorie/skript.ltx
@@ -314,7 +314,8 @@
     $(g,f)\mapsto g\circ f$. Diese Abbildung heißt \highl{Komposition}. Dabei
     verlangt man:
     \begin{enumerate}
-     \item $\CC(A,B)\cap\CC(C,D)=\emptyset$, falls $(A,B)\neq(C,D)$.
+     \item $\CC(A,B)\cap\CC(C,D)=\emptyset$, falls $(A,B)\neq(C,D)$ für alle
+      $A,B,C,D\in\CC$ gilt.
      \item $h\circ(g\circ f)=(h\circ g)\circ f$ für alle $A\xrightarrow{f}
       B\xrightarrow{g} C\xrightarrow{h}D$ in $\CC$.
      \item Für alle $A\in\CC$ existiert ein $\id_{A}\in\CC(A,A)$ mit
