--- a/kuelshammer-ringtheorie/skript.ltx
+++ b/kuelshammer-ringtheorie/skript.ltx
@@ -3023,11 +3023,11 @@ Sei $R$ ein Ring.
       \label{eq:9.6-1}0\rightarrow L\xrightarrow{f} M\xrightarrow{g}
 	 N\rightarrow0
     \end{gather}
-    ist die folgende Sequenz in $\kat{Ab}=_{\Z}\kat{Mod}$ exakt:
+    ist die folgende Sequenz in $\kat{Ab}=\vorunten{\Z}\kat{Mod}$ exakt:
     \begin{gather}
       \label{eq:9.6-2}
 	 0\rightarrow\Hom_{R}(P,L)\xrightarrow[\Hom_{R}(P,f)]{}
-	 \Hom_{R}(P,M)\xrightarrow[\Hom_{R}(P,G)]{} \Hom_{R}(P,N)
+	 \Hom_{R}(P,M)\xrightarrow[\Hom_{R}(P,g)] \Hom_{R}(P,N)
     \end{gather}
    \item Ein $P\in\vorunten{R}\kat{Mod}$ ist genau dann projektiv, wenn für
     jede kurze exakte Folge wie in \autoref{eq:9.6-1} die folgende Sequenz in
