Satzbau in Satz 6.6 verbessert.
git-svn-id: https://svn.lug-jena.de/uni-skripte@3561 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-ringtheorie/skript.ltx
+++ b/kuelshammer-ringtheorie/skript.ltx
@@ -2010,13 +2010,13 @@ Sei $R$ ein Ring.
 %satz 6.6
 \begin{satz}\label{satz:6.6}
   \begin{enumerate}
-   \item Sei $M$ ein $R$"~Modul ($M\in\vorunten{R}\kat{Mod}$) und $n\in\N$.
+   \item Sei $M$ ein $R$"~Modul und $n\in\N$.
     Dann ist $\End_{R}(M^{n})\cong\End_{R}(M)^{n\times n}$.
    \item $M_{1},\dotsc, M_{n}\in\vorunten{R}\kat{Mod}$,
     $\Hom_{R}(M_{i},M_{j})=0$ für alle $i\neq
     j\Rightarrow\End_{R}(M_{1}\times\dotso \times
     M_{n})\cong\End_{R}(M_{1})\times\dotso \times\End_{R}(M_{n})$.
-   \item $e\in R$ idempotent. So ist $\End_{R}(Re)\cong eRe$. Insbesondere
+   \item Sei $e\in R$ idempotent. So ist $\End_{R}(Re)\cong eRe$. Insbesondere
     $\End_{R}(\vorunten{R}R)\cong R^{o}$.
   \end{enumerate}
 \end{satz}
