Kleinere Fehler in Satz 7.2 beseitigt.
git-svn-id: https://svn.lug-jena.de/uni-skripte@3564 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-ringtheorie/skript.ltx
+++ b/kuelshammer-ringtheorie/skript.ltx
@@ -2131,7 +2131,7 @@ Sei $R$ ein Ring.
    \item Sei $M$ halbeinfach. Dann ist $\rad(M)=0$. Im Allgemeinen gilt nur
     die eine Richtung.
    \item $M\in\vorunten{R}\kat{mod}$ und halbeinfach genau dann, wenn $M$
-    artinsch und $\rad(M)=0$.
+    artinsch und $\rad(M)=0$ ist.
    \item $0\neq M\in\vorunten{R}\kat{mod}\Rightarrow\rad(M)\neq M$.
   \end{enumerate}
   \begin{proof}
@@ -2156,7 +2156,7 @@ Sei $R$ ein Ring.
        \item["`$\Rightarrow$"'] Sei $M=Rm_{1}+\dotsb+ Rm_{n}$ mit
 	$m_{1},\dotsc, m_{n}\in M$. Ist $M$ halbeinfach, so ist
 	$M=\bigoplus_{i\in I} M_{i}$ mit einfachen Untermoduln $M_{i}$ für
-	$i\in I$. Dann existiert eine Teilmenge $J\subseteq I$ endlich mit
+	$i\in I$. Dann existiert eine endliche Teilmenge $J\subseteq I$ mit
 	$m_{1},\dotsc, m_{n}\in\bigoplus_{j\in J} M_{j}$. Also
 	$M\subseteq\bigoplus_{j\in J} M_{j}$. Jedes $M_{j}$ ist artinsch.
 	Somit ist auch $M$ artinsch. Wegen
@@ -2167,7 +2167,8 @@ Sei $R$ ein Ring.
 	$\FM\neq\emptyset$, da $M\in\FM$. Folglich enthält $\FM$ ein minimales
 	Element~$D$. Für jeden maximalen Untermodul~$L\subseteq M$ ist $D\cap
 	L\in\FM$. Da $D$ minimal ist, gilt, $D=D\cap L\subseteq L$. Dies
-	zeigt, dass $D\subseteq\rad(M)=0$. Also existieren endlich viele
+	zeigt, dass $D\subseteq\rad(M)=0$. Also existieren endlich
+        viele maximale
 	Untermoduln $M_{1},\dotsc, M_{n}\subseteq M$ mit $M_{1}\cap\dotsb\cap
 	M_{n}=0$. Daher ist $f\colon M\rightarrow M/M_{1}\times\dotso \times
 	M/M_{n}$ mit $m\mapsto(m+M_{1},\dotsc, m+M_{n})$ ein
