Das Untermodul bekommt ein großes N.
git-svn-id: https://svn.lug-jena.de/uni-skripte@3565 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-ringtheorie/skript.ltx
+++ b/kuelshammer-ringtheorie/skript.ltx
@@ -2192,9 +2192,9 @@ Sei $R$ ein Ring.
 %satz 7.3
 \begin{satz}[Nakayamas Lemma]\label{satz:7.3}
   Sei $M\in\vorunten{R}\kat{mod}$ und $N\subseteq M$ Untermodul mit
-  $M=n+\rad(M)$. Dann folgt, $N=M$.
+  $M=N+\rad(M)$. Dann folgt, $N=M$.
   \begin{proof}
-    $\rad(M/N)\supseteq\rad(M)+N/N=M/N\Rightarrow M/N=0\Rightarrow M=N$
+    $\rad(M/N)\supseteq(\rad(M)+N)/N=M/N\Rightarrow M/N=0\Rightarrow M=N$
   \end{proof}
 \end{satz}
 
