--- a/kuelshammer-ringtheorie/skript.ltx
+++ b/kuelshammer-ringtheorie/skript.ltx
@@ -2270,10 +2270,10 @@ Sei $R$ ein Ring.
       Linksideal $L\subseteq R$ mit $R(1-y)\subseteq L$. Insbesondere: $1-y\in
       L$. Wegen $y\in J(R)\subseteq L$ folgt, $1=(1-y)+y\in L\Rightarrow L=R$\lightning{}
 
-      Also:$R(1-y)=R$. Sei $z\in R$ mit $z(1-y)=1$. Dann: $1-z=-zy\in J(R)$.
+      Also: $R(1-y)=R$. Sei $z\in R$ mit $z(1-y)=1$. Dann: $1-z=-zy\in J(R)$.
       Mit den gleichen Argumenten wie oben existiert $n\in R$ mit
       $n(1-(1-z))=1$. Folglich ist $1=uz$ und damit $z\in U(R)$ sowie
-      $1-z=z^{-1}\in U(R)$.
+      $1-z=z^{-1}\in U(R)$\todo{Ist das $1-z$ oder $1-y$?}.
      \item Sei $x\in R$ mit $1+ax$ linksinvertierbar für alle $a\in R$. Wir
       nehmen an, dass ein einfacher $R$"~Modul $S$ mit $xS\neq0$ existiert.
       Sei $s\in S$ mit $xs\neq0$. Dann: $Rxs=S$, da $S$ einfach. Sei $r\in R$
