Einschränkung einer Funktion als Subscript.
git-svn-id: https://svn.lug-jena.de/uni-skripte@3574 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-ringtheorie/skript.ltx
+++ b/kuelshammer-ringtheorie/skript.ltx
@@ -2865,7 +2865,7 @@ Sei $R$ ein Ring.
     wenn $g$ bijektiv ist.
    \item $0\rightarrow L\xrightarrow{f} M\xrightarrow{g}N\rightarrow0$ ist
     genau dann exakt, wenn $f$ injektiv, $g$ surjektiv und $\Bld(f)= \ker(g)$
-    ist Gegebenenfalls gilt nach dem Homomorphiesatz (\autoref{satz:4.1}):
+    ist. Gegebenenfalls gilt nach dem Homomorphiesatz (\autoref{satz:4.1}):
     $L\simeq\Bld(f)$ und $N\simeq M/\ker(g)=M/\Bld(f)$.
   \end{enumerate}
 \end{bemerk}
@@ -2888,7 +2888,7 @@ Sei $R$ ein Ring.
       mit $x=g'(y)$, so ist $0=g(x)= g(g'(x))= y$, also auch $x=g'(y)=0$.
       Somit ist $M=\ker(g)\oplus\Bld(g')$.
      \item[(3)$\Rightarrow$(1)] Sei (3) erfüllt und $h\coloneqq
-      g|U$. Wegen $M=\ker(g)\oplus U$ ist $h$ bijektiv.
+      g|_{U}$. Wegen $M=\ker(g)\oplus U$ ist $h$ bijektiv.
       Daher ist $g'\colon N\rightarrow M$ mit $n\mapsto h^{-1}(n)$ 
       $R$"~linear und $g(g'(n))= h(h^{-1}(n))=n$ für alle $n\in N$, d.\,h.
       $g\circ g'=\id_{N}$.
@@ -3001,7 +3001,7 @@ Sei $R$ ein Ring.
    \item Der obige Beweis und \autoref{bem:9.2} (iv) zeigen, dass jeder
     endlich erzeugte projektive $R$"~Modul zu einem direkten Summanden eines
     endlich erzeugten freien $R$"~Moduls isomorph ist.
-   \item Jeder freie $R$"~Modul ist projektiv, insbesondere isr
+   \item Jeder freie $R$"~Modul ist projektiv, insbesondere ist
     $\vorunten{R}R$ projektiv.
    \item Direkte Summanden von projektiven $R$"~Moduln sind wieder projektiv.
    \item Da Koprodukte von freien $R$"~Moduln wieder frei sind, sind
@@ -3231,7 +3231,7 @@ Sei $R$ ein Ring.
 
 % satz 9.11
 \begin{satz}\label{satz:9.11}
-  Sei $M\in\vorunten{R}\kat{Mod}$ und $M=M_{1}\oplus M_{n}$ mit streng
+  Sei $M\in\vorunten{R}\kat{Mod}$ und $M=M_{1}\oplus\dotso\oplus M_{n}$ mit streng
   unzerlegbaren Untermoduln $M_{1},\dotsc, M_{n}$. Sei ferner $M=K\oplus L$
   mit Untermoduln $K$ und $L$. Dann ist $K\simeq\bigoplus_{i\in I} M_{i}$ für
   eine Teilmenge $I\subseteq\{1,\dotsc,n\}$.
@@ -3358,7 +3358,7 @@ Sei $R$ ein Ring.
       \end{tikzpicture}
     \end{center}
    \item Zu jedem Linksideal $L\subseteq R$ und $g\in\Hom_{R}(L,Q)$ existiert
-    ein $h\in\Hom_{R}(R,Q)$ mit $h|L=g$.
+    ein $h\in\Hom_{R}(R,Q)$ mit $h|_{L}=g$.
    \item Zu jedem Linksideal $L\subseteq R$ und jedem $g\in\Hom_{R}(L,Q)$
     existiert ein $x\in Q$ mit $g(a)=ax$ für $a\in L$.
   \end{enumerate}
