--- a/kuelshammer-ringtheorie/skript.ltx
+++ b/kuelshammer-ringtheorie/skript.ltx
@@ -2699,7 +2699,7 @@ Sei $R$ ein Ring.
     ab. Also existiert ein $k\in\N$, welches die beiden Bedingungen erfüllt.
 
     Sei $x\in\Bld(f^{k})\cap\ker(f^{k})$. Sei $y\in M$ mit $x=f^{k}(y)$. Dann
-    isr $0=f^{k}(x)= f^{2k}(y)$, d.\,h. $y\in\ker(f^{2k})=\ker(f^{k})$, d.\,h.
+    ist $0=f^{k}(x)= f^{2k}(y)$, d.\,h. $y\in\ker(f^{2k})=\ker(f^{k})$, d.\,h.
     $f^{k}(y)=0=x$. Sei $m\in M$. Dann ist
     $f^{k}(m)\in\Bld(f^{k})=\Bld(f^{2k})$. Sei $n\in M$ mit $f^{k}(m)=
     f^{2k}(n)$. Dann ist $0=f^{k}(m-f^{k}(n))$, d.\,h.
