--- a/kuelshammer-ringtheorie/skript.ltx
+++ b/kuelshammer-ringtheorie/skript.ltx
@@ -198,6 +198,8 @@
 \newcommand*{\FP}{\mathfrak{P}}
 \newcommand*{\FQ}{\mathfrak{Q}}
 
+\newcommand*{\F}{\mathbb{F}}
+
 \newcommand*{\bigtimes}{\mathop{\raisebox{-.5ex}{\hbox{\huge{$\times$}}}}}
 \newcommand*{\kat}[1]{\mathbf{#1}}
 
@@ -4559,7 +4561,7 @@ Sei $R$ ein Ring.
 \end{satz}
 
 %satz 13.6
-\begin{satz}
+\begin{satz}\label{satz:13.6}
   Für $M\in\kat{Mod}_{R}$ hat man einen (kanonischen) $\Z$"~Isomorphismus
   $\mu\colon M\otimes_{R}R\rightarrow M$ mit $\mu(m\otimes r)= mr$ für alle
   $m\in $ und $r\in R$.
@@ -6137,7 +6139,7 @@ Im folgenden seien $R,S,T$ immer Ringe.
 %aufg 53
 \begin{exerc}
   Geben Sie bis auf Isomorphie alle endlich erzeugten unzerlegbaren
-  $\Z$"~Moduln an.
+  $\Z$"~Moduln an.\\
   Sei $A\in\vorunten{\Z}\kat{mod}$ unzerlegbar. Nach dem Hauptsatz über
   endlich erzeugte abelsche Gruppen muss $A$ zyklisch sein. Sei zunächst
   $A=\Z$. Da $\End_{\Z}(\Z)\cong\Z$\todo{Verweis zu Satz 6.6 (iii)} nur die
@@ -6149,6 +6151,22 @@ Im folgenden seien $R,S,T$ immer Ringe.
   $A$ tatsächlich unzerlegbar. Die endlich erzeugten unzerlegbaren
   $\Z$"~Moduln sind also durch $\Z/p^{m}\Z$ mit $p\in\PP\cup\{0\}$ und
   $m\in\N$ gegeben.
+\end{exerc}
+
+%aufg 54
+\begin{exerc}
+  Geben Sie ein Beispiel für einen Ring $R$, einen $R$"~Rechtsmodul $M$ und
+  einen $R$"~Linksmodul $N$ mit $M\otimes_{R} N\neq\Set{m\otimes n | m\in M,
+  n\in N}$ an.\\
+  Sei $R=\F_{2}$, $M=R^{2}$ und $N=R^{3}$. Dann ist
+  \begin{gather*}
+    M\otimes_{R} N= (R^{2})\otimes_{R}
+       N\stackrel{\text{\autoref{satz:13.7}}}{\simeq} R\otimes_{R}N\times
+       R\otimes_{R}N \stackrel{\text{\autoref{satz:13.6}}}{\simeq} N\times
+       N\simeq R^{6}
+  \end{gather*}
+  Aus $\abs{M\times N}=2^{5}<2^{6}=\abs{R^{6}}=\abs{M\otimes_{R}N}$ folgt
+  sofort die Behauptung.
 \end{exerc}
 
 \begin{thebibliography}{99}
