Aufgabe 55 und Lösung.
git-svn-id: https://svn.lug-jena.de/uni-skripte@3578 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-ringtheorie/skript.ltx
+++ b/kuelshammer-ringtheorie/skript.ltx
@@ -4642,7 +4642,7 @@ Sei $R$ ein Ring.
 \end{bemerk}
 
 %satz 13.8
-\begin{satz}
+\begin{satz}\label{satz:13.8}
   Für $M\in\kat{Mod}_{R}$ und jede kurze exakte Sequenz
   \begin{gather}
     \label{eq:13.8}0\rightarrow N\xrightarrow{g}
@@ -6135,6 +6135,10 @@ Im folgenden seien $R,S,T$ immer Ringe.
 
 \section{Übungsblatt 12}
 
+%aufg 49
+\begin{exerc}\label{exe:49}
+  
+\end{exerc}
 \section{Übungsblatt 13}
 %aufg 53
 \begin{exerc}
@@ -6167,6 +6171,98 @@ Im folgenden seien $R,S,T$ immer Ringe.
   \end{gather*}
   Aus $\abs{M\times N}=2^{5}<2^{6}=\abs{R^{6}}=\abs{M\otimes_{R}N}$ folgt
   sofort die Behauptung.
+\end{exerc}
+
+%aufg 55
+\begin{exerc}
+  Ist $\Q$ ein flacher $\Z$"~Modul?\\
+  Nach dem \autoref{satz:13.8} genügt es folgendes zu zeigen: Sind
+  $M,N\in\kat{Mod}_{\Z}$ und $f\colon M\rightarrow N$ injektiv, so ist auch
+  $f\otimes\id\colon M\otimes_{\Z} \Q\rightarrow N\otimes_{\Z}\Q$ injektiv.
+  Nach der \autoref{bem:9.2} (iv) existiert eine kurze exakte Folge:
+  \begin{gather*}
+    0\rightarrow K\hookrightarrow F\coloneqq\coprod_{i\in
+       I}\Z\xrightarrow{\pi} N\rightarrow0
+  \end{gather*}
+  Sei $L\coloneqq\pi^{-1}(f(M))\subseteq F$ und $\phi\colon L\rightarrow M$
+  mit $x\mapsto f^{-1}(\pi(x))$. Offenbar ist $L$ dann ein $\Z$"~Modul und
+  $\phi$ ist wohldefiniert und $\Z$"~linear, da $f$ injektiv ist. Wegen
+  $\pi(K)=0\subseteq f(M)$ ist $K\subseteq L$. Für $x\in L$ gilt außerdem:
+  $x\in\ker(\phi)\Leftrightarrow f^{-1}(\pi(x))=0\Leftrightarrow x\in K$. Also
+  ist auch die Folge $0\rightarrow K\hookrightarrow
+  L\xrightarrow{\phi}M\rightarrow0$ exakt. Somit erhält man ein kommutatives
+  Diagramm mit exakten Zeilen:
+
+  \begin{tikzpicture}
+    \node (k1)  {$K$};
+    \node [right=2cm of k1] (l) {$L$};
+    \node [right=2cm of l] (m) {$M$};
+    \node [right=2cm of m] (nu1) {$0$};
+    \node [below=1.5cm of k1] (k2) {$K$};
+    \node [right=2cm of k2] (f) {$F$};
+    \node [right=2cm of f] (n) {$N$};
+    \node [right=2cm of n] (nu2) {$0$};
+    \draw[right hook->] (k1) edge node {} (l)
+    (k2) edge node {} (f)
+    (l) edge node [right]{$\alpha$} (f);
+    \draw[->] (k1) edge node [right]{$\id$} (k2)
+    (l) edge node [above]{$\phi$} (m)
+    (f) edge node [above]{$\pi$} (n)
+    (m) edge node [right]{$f$} (n)
+    (m) edge node {} (nu1)
+    (n) edge node {} (nu2);
+  \end{tikzpicture}
+
+  Tensorieren liefert ein weiteres kommutatives Diagramm mit exakten Zeilen
+  (\autoref{satz:13.8}):
+
+    \begin{tikzpicture}
+    \node (k1)  {$K\otimes_{\Z}\Q$};
+    \node [right=2cm of k1] (l) {$L\otimes_{\Z}\Q$};
+    \node [right=2cm of l] (m) {$M\otimes_{\Z}\Q$};
+    \node [right=2cm of m] (nu1) {$0$};
+    \node [below=1.5cm of k1] (k2) {$K\otimes_{\Z}\Q$};
+    \node [right=2cm of k2] (f) {$F\otimes_{\Z}\Q$};
+    \node [right=2cm of f] (n) {$N\otimes_{\Z}\Q$};
+    \node [right=2cm of n] (nu2) {$0$};
+    \draw[right hook->] (k1) edge node {} (l)
+    (k2) edge node {} (f)
+    (l) edge node [right]{$\alpha\otimes\id$} (f);
+    \draw[->] (k1) edge node [right]{$\id$} (k2)
+    (l) edge node [above]{$\phi\otimes\id$} (m)
+    (f) edge node [above]{$\pi\otimes\id$} (n)
+    (m) edge node [right]{$f\otimes\id$} (n)
+    (m) edge node {} (nu1)
+    (n) edge node {} (nu2);
+  \end{tikzpicture}
+
+  Nach der \autoref{exe:49} (iii) genügt es zu zeigen, dass
+  $\forall\otimes\id\colon L\otimes_{\Z}\Q\rightarrow F\otimes_{\Z}\Q$
+  injektiv ist, wobei $\alpha\colon L\hookrightarrow F$ die
+  Inklusionsabbildung ist. Sei dafür $\sum_{i=1}^{n} x_{i}\otimes
+  \nicefrac{a_{i}}{b_{i}}\in\ker(\alpha\otimes\id)$ mit $x_{1},\dotsc,
+  x_{n}\in L$ und
+  $\nicefrac{a_{1}}{b_{2}},\dotsc,\nicefrac{a_{n}}{b_{n}}\in\Q$. Mit
+  $b\coloneqq b_{1}\dotso b_{n}$ und $b_{i}'\coloneqq\nicefrac{b}{b_{i}}$ ist
+  dann
+  \begin{gather*}
+    \sum_{i=1}^{n} x_{i}\otimes\frac{a_{i}}{b_{i}}= \sum_{i=1}^{n}
+       x_{i}\otimes \frac{a_{i}b_{i'}}{b}= \sum_{i=1}^{n} x_{i}a_{i}b_{i}'
+       \otimes\frac{1}{b}= \left(\sum_{i=1}^{n}
+       x_{i}a_{i}b_{i}'\right)\otimes\frac{1}{b}
+  \end{gather*}
+  Somit ist auch
+  \begin{align*}
+    0 &=b\left(\sum_{i=1}^{n} x_{i}a_{i}b_{i}'\otimes\frac{1}{b}\right)=
+       \sum_{i=1}^{n} x_{i}a_{i}b_{i}'\otimes1\in F\otimes_{\Z}\Q\\
+    &= \left(\coprod_{i\in I}\Z\right)\otimes_{\Z} \Q
+       \stackrel{\text{\autoref{satz:13.7}}}{\simeq} \coprod_{i\in I}
+       \left(\Z\otimes_{\Z} \Q\right)
+       \stackrel{\text{\autoref{satz:13.6}}}{\simeq} \coprod_{i\in I} \Q
+  \end{align*}
+  Geht man die obigen Isomorphismen elementweise durch, so erhält man
+  $\sum_{i=1}^{n} x_{i}a_{i}b_{i}'=0$. Damit ist auch $\sum_{i=1}^{n} x_{i}
+  \otimes\nicefrac{a_{i}}{b_{i}}=0$ und alles ist gezeigt.
 \end{exerc}
 
 \begin{thebibliography}{99}
