Aufgabe 58 mit Lösung
git-svn-id: https://svn.lug-jena.de/uni-skripte@3581 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-ringtheorie/skript.ltx
+++ b/kuelshammer-ringtheorie/skript.ltx
@@ -6318,6 +6318,34 @@ Im folgenden seien $R,S,T$ immer Ringe.
   \end{itemize}
 \end{exerc}
 
+%aufg 58
+\begin{exerc}
+  Zeigen Sie, dass zu jedem $\Z$"~Modul $A$ und jedem $a\in A\setminus\{0\}$
+  ein $f\in\Hom_{\Z}(A,\Q/\Z)$ mit $f(a)\neq 0$ existiert.\\
+  Da $\Q/\Z$ injektiv ist, genügt es zu zeigen, dass ein
+  $f\in\Hom_{\Z}(\langle a\rangle, \Q/\Z)$ mit $f(a)\neq0$ existiert:
+
+  \begin{tikzpicture}
+    \node (n) {$0$};
+    \node [right=2cm of n] (a) {$\langle a\rangle$};
+    \node [right=2cm of a] (aa) {$A$};
+    \node [below=1.5cm of a] (qz) {$\Q/\Z$};
+    \draw[->] (n) edge node {} (a)
+    (a) edge node [left]{$f$} (qz);
+    \draw[right hook->] (a) edge node {} (aa);
+    \draw[->,dotted] (aa) edge node {} (qz);
+  \end{tikzpicture}
+
+  Hat $a$ unendliche Ordnung, so können wir $f(na)\coloneqq\nicefrac{n}{2}+\Z$
+  für $n\in\Z$ definieren. Dann ist $f$ sicher wohldefiniert und $\Z$"~linear.
+  Wie gefordert gilt auch $f(a)=\nicefrac{1}{2}+\Z\neq0$. Nehmen wir nun an,
+  dass $a$ die Ordnung $2\leq m<\infty$ hat. Dann können wir $f(na)\coloneqq
+  \nicefrac{n}{m}+\Z$ definieren. Ist $na=n'a$ für $n,n'\in\Z$, so folgt,
+  $m\mid n-n'$ und $\nicefrac{n}{m}- \nicefrac{n'}{m}+\Z=
+  \frac{(n-n')}{m}+\Z=0$. Also ist $f$ wohldefiniert und $\Z$"~linear.
+  Außerdem gilt $f(a)= \nicefrac{1}{m}+\Z\neq0$.
+\end{exerc}
+
 \begin{thebibliography}{99}
  \bibitem{andfull94} \textsc{Frank W.\,Anderson}, \textsc{Ken R.\,Fuller}:
   Rings and Categories of Modules. Springer 1998. 2.\,Auflage.
