Aufgaben von Blatt 12
git-svn-id: https://svn.lug-jena.de/uni-skripte@3583 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-ringtheorie/skript.ltx
+++ b/kuelshammer-ringtheorie/skript.ltx
@@ -6205,6 +6205,79 @@ Im folgenden seien $R,S,T$ immer Ringe.
 
 \section{Übungsblatt 12}
 
+%aufg 50
+\begin{exerc}
+  Seien $R$ ein Ring, $M,N\in\vorunten{R}\kat{Mod}$ und $f\in\Hom_{R}(M,N)$.
+  Man nennt $f$ \highl[Homomorphismus!projektiver]{projektiv}, falls ein
+  projektiver $R$"~Modul $P$ und $f'\in\Hom_{R}(M,P)$, $f''\in\Hom_{R}(P,N)$
+  mit $f=f''\circ f'$ existieren. Man setzt dann
+  \begin{gather*}
+    \Hom_{R}^{p}(M,N)\coloneqq\Set{g\in\Hom_{R}(M,N) | g \text{ projektiv}}
+  \end{gather*}
+  Zeigen Sie:
+  \begin{enumerate}
+   \item $\Hom_{R}^{p}(M,N)$ ist eine Untergruppe von $\Hom_{R}(M,N)$. Man setzt
+    \begin{gather*}
+      \overline{\Hom_{R}}(M,N)\coloneqq\Hom_{R}(M,N)/\Hom_{R}^{p}(M,N)
+    \end{gather*}
+   \item Für $K,L\in\vorunten{R}\kat{Mod}$ und $f\in\Hom_{R}^{p}(M,N)$,
+    $g\in\Hom_{R}(K,M)$, $h\in\Hom_{R}(N,L)$ ist $f\circ
+    g\in\Hom_{R}^{p}(K,N)$ und $h\circ f\in\Hom_{R}^{p}(M,L)$.
+   \item $\End_{R}^{p}(M)\coloneqq\Hom_{R}^{p}(M,M)\trianglelefteq \End_{R}(M)$
+   \item Man erhält folgendermaßen eine Kategorie $\vorunten{R}\kat{StMod}$,
+    die \highl[Modulkategorie!stabile]{stabile Modulkategorie} von $R$:
+    \begin{itemize}
+     \item Die Objekte von $\vorunten{R}\kat{StMod}$ sind die $R$"~Moduln.
+     \item Für $M,N\in\vorunten{R}\kat{Mod}$ ist $\overline{\Hom_{R}}(M,N)$
+      die Menge der Morphismen von $M$ nach $N$ in $\vorunten{R}\kat{StMod}$.
+     \item Für $L,M,N\in\vorunten{R}\kat{Mod}$, $f\in\Hom_{R}(L,M)$,
+      $g\in\Hom_{R}(M,N)$ und $\overline{f}\coloneqq
+      f+\Hom_{R}^{p}(L,M)\in\overline{\Hom_{R}}(L,M)$, $\overline{g}\coloneqq
+      g+\Hom_{R}^{p}(M,N)\in\overline{\Hom_{R}}(M,N)$ ist
+      $\overline{g}\circ\overline{f}= \overline{g\circ f}$.
+    \end{itemize}
+   \item Man erhält einen (\highl[Funktor!kanonischer]{kanonischen}) Funktor
+    $\Phi\colon\vorunten{R}\kat{Mod}\rightarrow\vorunten{R}\kat{StMod}$ mit
+    $\Phi M\coloneqq M$ für $M\in\vorunten{R}\kat{Mod}$ und $\Phi
+    f\coloneqq\overline{f}$ für jeden Morphismus $f\colon M\rightarrow N$ in
+    $\vorunten{R}\kat{Mod}$.
+   \item Ein $R$"~Modul $P$ ist genau dann projektiv, wenn $\id_{P}$ projektiv
+    ist.
+  \end{enumerate}
+\end{exerc}
+
+%aufg 51
+\begin{exerc}
+  \begin{enumerate}
+   \item Sei $e$ ein streng unzerlegbares Idempotent in einem Ring $R$ und
+    $(I_{j})_{j\in J}$ eine Familie von Idealen in $R$ mit $e\in\sum_{j\in J}
+    I_{j}$. Zeigen Sie, dass ein $j\in J$ mit $e\in I_{j}$ existiert.
+    (Rosenbergs Lemma)
+   \item Seien $I_{1},\dotsc, I_{n}$ Ideale in einem Ring $R$ mit $R=
+    I_{1}\oplus\dotso \oplus I_{n}$. Zeigen Sie, dass paarweise orthogonale
+    Idempotente $e_{1},\dotsc, e_{n}\in Z(R)$ existieren mit $e_{1}+\dotsb+
+    e_{n}=1$ und $I_{j}=Re_{j}= e_{j}R$ für $j=1,\dotsc,n$.
+  \end{enumerate}
+\end{exerc}
+
+%aufg 52
+\begin{exerc}
+  Sei $R$ ein Ring und $M\in\vorunten{R}\kat{Mod}$. Zeigen Sie:
+  \begin{enumerate}
+   \item Die abelsche Gruppe $M^{*}\coloneqq\Hom_{R}(M,R)$ ist ein
+    $R$"~Rechtsmodul mit $(fr)(m)\coloneqq f(m)r$ für $f\in M^{*}$, $r\in R$
+    und $m\in M$. Man nennt $M^{*}$ den zu $M$
+    \highl[Rechtsmodul!dualer]{dualen Rechtsmodul}\index{Modul!dualer}.
+   \item Analog hat man zu jedem $N\in\kat{Mod}_{R}$ einen dualen
+    $R$"~Linksmodul $N^{*}$.
+   \item Wie in der linearen Algebra existiert stets ein kanonischer
+    $R$"~Homomorphismus $\epsilon_{M}\colon M\rightarrow M^{**}$.
+   \item Ist $M$ projektiv, so ist $\epsilon_{M}$ injektiv.
+   \item Ist $M$ endlich erzeugt und projektiv, so ist $\epsilon_{M}$ bijektiv
+    und $M^{*}$ ist auch projektiv.
+   \item Ist $M\simeq Re$ für ein Idempotent $e\in R$, so ist $M^{*}\simeq eR$.
+  \end{enumerate}
+\end{exerc}
 
 \section{Übungsblatt 13}
 %aufg 53
